--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,7 @@
     "keywords": ["image", "gd", "imagick", "gmagick", "imagemagick"],
     "homepage": "http://phpixie.com",
     "type": "library",
-    "license": "BSD",
+    "license": "BSD-3-Clause",
     "authors": [
         {
             "name": "Roman Tsiupa",
